sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:12: error: reassignment to val
	i=minpos
         ^